cmake_minimum_required(VERSION 3.20)

project(ProjectEuler)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED On)
set(CMAKE_CXX_EXTENSIONS Off)
set(CMAKE_VERBOSE_MAKEFILE Off)

add_executable(problem001 problem001.cpp)
add_executable(problem002 problem002.cpp)
add_executable(problem003 problem003.cpp)
add_executable(problem004 problem004.cpp)
add_executable(problem005 problem005.cpp)
#add_executable(problem008 problem008.cpp)
